--- a/RK3399环境配置总结.md
+++ b/RK3399环境配置总结.md
@@ -256,7 +256,7 @@ sudo apt-get install x11vnc
   x11vnc -display :0 -auth /var/run/lightdm/root/:0 -forever -bg -o /var/log/x11vnc.log -rfbauth /etc/x11vnc.pass -rfbport 5900 
   ```
 
-  # 6 QT
+# 6 QT
 
   ```
   sudo apt-get install qt5-default
@@ -266,21 +266,32 @@ sudo apt-get install x11vnc
   ```
 
   在RK3399端：启动qtcreator前先执行下面命令
-  
+
   ```
   source /opt/ros/kinetic/setup.bash
   ```
-  
+
   在PC端：在`Desktop`文件内做如下修改：
-  
+
   ```
   Exec=bash -i -c /opt/Qt5.10.0/Tools/QtCreator/bin/qtcreator
   ```
-  
+
   在`Exec=`后添加`bash -i -c`命令即可
-  
+
   参考链接[【QT】QT的学习：在QT中如何调用ROS库](https://blog.csdn.net/ipfpm/article/details/83504491)
-  
+
+
+
+打开串口权限
+
+```
+vim /etc/udev/rules.d/70-ttyusb.rules
+KERNEL=="ttyUSB[0-9]*",MODE="0666"
+```
+
+参考资料[解决Linux中普通用户无权限访问串口设备问题](https://blog.csdn.net/u013992330/article/details/79102741)
+
   
 
 # 7. Python模块
@@ -376,6 +387,10 @@ Tip:安装OpenCv 3.1的过程中要下载ippicv_linux_20151201，由于网络的
 
 [源码编译opencv卡在IPPICV: Download:](https://blog.csdn.net/u010739369/article/details/79966263)
 
+# Mat中像素的获取与赋值
+
+https://blog.csdn.net/m0_37041325/article/details/80705309
+
 # 7.3 识别二维码
 
 # 7.3.1 Python版本
@@ -390,7 +405,36 @@ pip3 install pyzbar
 https://github.com/ftylitak/qzxing
 ```
 
+```
+https://github.com/ruisebastiao/QZXing
+```
 
+Pyzbar
+
+```
+export CFLAGS=""
+export NM=nm
+```
+
+
+
+```
+./configure --prefix=$(pwd)/output --host=arm-linux --enable-shared --enable-static --without-imagemagick --without-jpeg --without-python --without-gtk --without-qt --without-x --disable-video --build=aarch64 
+```
+
+export PKG_CONFIG_PATH=$PKG_CONFIG_PATH:/usr/local/zbar/lib/pkgconfig
+
+pkg-config --libs --cflags zbar
+
+原文链接：https://blog.csdn.net/KayChanGEEK/article/details/78758817
+
+https://blog.csdn.net/qq_16542775/article/details/80610105
+
+https://www.cnblogs.com/iplus/archive/2012/11/06/4467368.html
+
+参考源码：
+
+* [Opencv+Zbar二维码识别（标准条形码/二维码识别）](https://www.cnblogs.com/mtcnn/p/9411993.html)
 
 # 7.4 simplejson
 
