--- a/RK3399环境配置总结.md
+++ b/RK3399环境配置总结.md
@@ -138,7 +138,7 @@ sudo systemctl daemon-reload && sudo systemctl start turtlebot
 
 
 
-# 3.安装shadowsocks和proxychains
+# 3.安装shadowsocks和proxychains(翻墙用的)
 
 ## 3.1 shadowsocks
 
@@ -220,7 +220,7 @@ fi
 source ~/.bashrc
 ```
 
-# 5 VNC
+# 5 VNC(远程控制用)
 
 ```
 sudo apt-get install x11vnc
