update markdown file

--- a/RK3399环境配置总结.md
+++ b/RK3399环境配置总结.md
@@ -1,18 +1,5 @@
 
 
-# 1. 首次连接之前，在 ROS master所在环境用以下命令安装**rosbridge suite**:
-
-https://roslibpy-docs-zh.readthedocs.io/zh/latest/api.html#ros-setup
-
-```
-sudo apt-get install -y ros-kinetic-rosbridge-server
-sudo apt-get install -y ros-kinetic-tf2-web-republisher
-```
-
-https://blog.csdn.net/Hsin96/article/details/89603499
-
-
-
 # 1. 换清华大学源
 
 ## 1.1 系统源
@@ -314,7 +301,7 @@ waiting for long time on RK3399
 
 ## 7.2 OpenCV
 
-### 7.2.1 python版本
+### 7.2.1 RK3399版本
 
 一定要先装上`numpy`模块
 
@@ -357,7 +344,7 @@ sudo make install
 
 ```
 
-### 7.2.2 PC版本
+### 7.2.2 PC版本(暂时不用)
 
 参考资料：[Ubuntu 16.04 + Qt 5.11 +opencv 3.4完美配置（亲测，最简单完美的方法）](https://blog.csdn.net/wanzhen4330/article/details/82622664)
 
@@ -399,32 +386,31 @@ https://blog.csdn.net/m0_37041325/article/details/80705309
 pip3 install pyzbar
 ```
 
-# 7.3.2 PC版本
+# 7.3.2 PC(RK3399)版本
 
-```
-https://github.com/ftylitak/qzxing
-```
+~~https://github.com/ftylitak/qzxing~~
 
-```
-https://github.com/ruisebastiao/QZXing
-```
+~~https://github.com/ruisebastiao/QZXing~~
 
-Pyzbar
+* Pyzbar
+
+  下载pyzbar源码：[ZBar bar code reader](http://zbar.sourceforge.net/)
+
+  参考[ZBar移植到ARM](https://blog.csdn.net/KayChanGEEK/article/details/78758817)完成编译
 
 ```
 export CFLAGS=""
 export NM=nm
 ```
 
-
-
 ```
 ./configure --prefix=$(pwd)/output --host=arm-linux --enable-shared --enable-static --without-imagemagick --without-jpeg --without-python --without-gtk --without-qt --without-x --disable-video --build=aarch64 
 ```
 
+```
 export PKG_CONFIG_PATH=$PKG_CONFIG_PATH:/usr/local/zbar/lib/pkgconfig
-
 pkg-config --libs --cflags zbar
+```
 
 原文链接：https://blog.csdn.net/KayChanGEEK/article/details/78758817
 
