update config file

--- a/RK3399环境配置总结.md
+++ b/RK3399环境配置总结.md
@@ -344,13 +344,17 @@ sudo make install
 
 ```
 
-### 7.2.2 PC版本(暂时不用)
+### 7.2.2 PC版本
 
 参考资料：[Ubuntu 16.04 + Qt 5.11 +opencv 3.4完美配置（亲测，最简单完美的方法）](https://blog.csdn.net/wanzhen4330/article/details/82622664)
 
+源码：[OpenCV 3.4](https://opencv.org/opencv-3-4/)
+
+进入网页，点击`Source`下载
+
 ```
-wget https://github.com/opencv/opencv/archive/3.2.0.zip
-cd opencv-3.2.0/
+unzip opencv-3.4.0.zip
+cd opencv-3.4.0/
 mkdir build
 cd build 
 
@@ -403,8 +407,20 @@ export CFLAGS=""
 export NM=nm
 ```
 
+* **PC端**
+
+```
+/configure --prefix=$(pwd)/output --enable-shared --enable-static --without-imagemagick --without-jpeg --without-python --without-gtk --without-qt --disable-video 
+sudo make 
+sudo make intsall
+```
+
+* **RK3399端**
+
 ```
 ./configure --prefix=$(pwd)/output --host=arm-linux --enable-shared --enable-static --without-imagemagick --without-jpeg --without-python --without-gtk --without-qt --without-x --disable-video --build=aarch64 
+sudo make
+sudo make intsall
 ```
 
 ```
