update config file

--- a/RK3399环境配置总结.md
+++ b/RK3399环境配置总结.md
@@ -1,5 +1,3 @@
-
-
 # 1. 换清华大学源
 
 ## 1.1 系统源
@@ -90,7 +88,7 @@ sudo apt-get install -y ros-kinetic-turtlebot-bringup ros-kinetic-turtlebot-tele
 
 若出现如下图问题：··
 
-![image-20200209113407597](C:\Users\multimicro\AppData\Roaming\Typora\typora-user-images\image-20200209113407597.png)
+![image-20200209113407597](https://i.loli.net/2020/06/06/vlr7sTDK9QL6fYS.png)
 
 执行：
 
@@ -164,7 +162,7 @@ sslocal -c /etc/shadowsocks.json &
 ss -lntp | grep 1080
 ```
 
-![image-20200208184156689](C:\Users\multimicro\AppData\Roaming\Typora\typora-user-images\image-20200208184156689.png)
+![image-20200208184156689](https://i.loli.net/2020/06/06/Iqe9YUTKbWRXEzS.png)
 
 ## 3.2 proxychains
 
